<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="10dp" >

  <EditText
    android:id="@+id/trip_edittext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:ems="10"
    android:hint="@string/formname"/>

  <EditText
    android:layout_width="match_parent"
    android:id="@+id/passenger1_edittext"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/formpassenger1"
    android:inputType="text"/>

  <EditText
    android:layout_width="match_parent"
    android:id="@+id/passenger2_edittext"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/formpassenger2"
    android:inputType="text"/>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/passenger3_edittext"
    android:ems="10"
    android:hint="@string/formpassenger3"
    android:inputType="text"/>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/passenger4_edittext"
    android:ems="10"
    android:hint="@string/formpassenger4"
    android:inputType="text">
  </EditText>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/btn_update"
      android:layout_weight="1"
      android:text="@string/btn_update" />

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/btn_delete"
      android:layout_weight="1"
      android:text="@string/btn_delete" />

  </LinearLayout>

</LinearLayout>
