<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="20dp" >

      <EditText
        android:id="@+id/trip_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/formname" >

  <requestFocus />
      </EditText>

      <EditText
        android:id="@+id/passenger1_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/formpassenger1"
        android:ems="10"
        android:inputType="text" />

      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/passenger2_edittext"
        android:hint="@string/formpassenger2"
        android:inputType="text" />

      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/passenger3_edittext"
        android:hint="@string/formpassenger3"
        android:inputType="text" />

      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/passenger4_edittext"
        android:hint="@string/formpassenger4"
        android:inputType="text" />

        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/feedbackbutton"
          android:layout_gravity="center"
          android:id="@+id/add_trip"/>
      </LinearLayout>
